# simplesolat-api

./: .env  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yaml  sample.env
.github/workflows/: build-simplesolat-api-docker-images.yaml
data/: adm2_zone_mapping_id.json  zones.html  zones.yaml
migrations/2025-11-07-084710-0000_create_table_zones/: down.sql  up.sql
migrations/2025-11-11-025905-0000_create_table_prayer_times/: down.sql  up.sql
migrations/2025-11-11-030401-0000_create_index_prayer_times_idx_zone_code_date/: down.sql  up.sql
migrations/2026-03-15-000000-0000_add_country_to_zones/: down.sql  up.sql
migrations/2026-04-02-000000-0000_add_timezone_to_zones/: down.sql  up.sql
migrations/2026-04-03-000000-0000_create_table_countries/: up.sql
src/: lib.rs  main.rs  schema.rs
src/api/: acju.rs  data_repo.rs  equran.rs  jakim.rs  kheu.rs  mod.rs  muis.rs
src/models/: countries.rs  db.rs  mod.rs  prayer_times.rs  zones.rs
src/routes/: countries.rs  health.rs  mod.rs  prayer_times.rs  zones.rs
src/service/: mod.rs  prayer_times.rs  retry.rs  sync.rs  sync_acju.rs  sync_equran.rs  sync_jakim.rs  sync_kheu.rs  sync_muis.rs  zones.rs
tests/: e2e.rs
