[package]
name = "simplesolat-api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
chrono-tz = "0.10.4"
diesel = { version = "2.3.3", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
