[package]
name = "simplesolat-api"
version = "0.1.0"
edition = "2024"
default-run = "simplesolat-api"

[dependencies]
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
diesel = { version = "2.3.3", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.3.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
